--- a/templates/landing.html
+++ b/templates/landing.html
@@ -62,7 +62,7 @@
 
         <section id="features" class="features-section">
             <div class="container">
-                <h2 class="section-title animate__animated animate__fadeIn">Why Choose QuizVerse</h2>
+                <h2 class="section-title animate__animated animate__fadeIn">Why Choose Quizverse</h2>
                 <div class="row">
                     <div class="col-md-4 animate__animated animate__fadeInUp">
                         <div class="feature-card">
